2012-03-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/pf.cpp: Another new/delete cleanup

2012-03-15  Adam Johansen <a.m.johansen@warwick.ac.uk>

	* Standardized file extensions .h and .cpp
	* src/blockpfgaussianoptfuncs.cpp merged into
	src/blockpfgaussianopt.cpp.
	* src/pffuncs.cpp merged into src/pf.cpp.

2012-03-13  Dirk Eddelbuettel  <edd@debian.org>
	
	* src/blockpfgaussianoptfuncs.cc: minor new/delete fix
	
2012-03-13  Adam Johansen <a.m.johansen@warwick.ac.uk>

	* NAMESPACE: Added blockpfGaussianOpt.
	* inst/include/blockpfguassianopt.hh: Declarations for univariate
	block-sampling particle filter implementation.
	* src/blockpfguassianopt.cc: Main file for univariate block-sampling
	particle filter implementation.
	* src/blockpfguassianoptfuncs.cc: Internal functions for same.
	* R/blockpfguassianopt.R: Minimal wrapper and output plotting for
	same.
	* doc/blockpfguassianopt.Rd: Added minimal documentation.

2012-01-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.0.2

	* inst/include/rngR.h: New implementation of the RNG class, relying
	solely on R thus removing the need to build against the GSL

	* inst/include/rng.hh: #ifdef'ed out as GNU GSL RNGs no longer used
	* src/rng.cc: Idem
	* src/simfunctions.cc: Idem; and two calls changed from GSL to R

	* inst/include/sampler.hh: Comment out ctor with GSL RNG type
	* inst/include/smctc.hh: Include new rngR.h instead of rng.hh
	* src/pffuncs.cc: Idem

	* src/Makevars: Remove GSL vars for compilation

2012-01-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/rareEventsEx.cpp: Adapted main() from rare-events/main.cc in
	the SMCTC sources
	* src/simfunctions.hh: Also imported from rare-events/, and renamed
	fInitialize to fInitializMC as the library already fInitialize
	* src/simfunctions.hh: Dito
	* src/markovchains/markovchain.h: Also imported from rare-events/
	* R/rareEvents.R: Added minimal wrapper function
	* man/rareEvents.Rd: Added minimal manual page
